# Sudoku

./: .gitignore
data/: io.github.sepehr_rs.Sudoku.metainfo.xml.in
src/: application.py  log_utils.py  window.py
src/base/: board_base.py  debug_settings.py  generator_base.py  log_paths.py  manager_base.py  meson.build  preferences.py  runtime_profile.py
src/screens/: about_dialog.py  meson.build  preferences_page.py
src/variants/classic_sudoku/: manager.py
tests/: test_debug_info_includes_log_path.py  test_debug_settings.py  test_fd_growth_shared_popover.py  test_generator_logging.py  test_logging_setup.py  test_logging_toggle.py  test_manager_restore_logging.py  test_preference_change_logging.py  test_runtime_profile.py  test_save_load_logging.py  test_window_logging.py
