modulesubdir = join_paths(moduledir, 'base')

services_sources = [
    'board_base.py',
    'generator_base.py',
    'manager_base.py',
    'rules_base.py',
    'ui_helpers.py',
    'preferences.py',
    'preferences_manager.py',
    'log_paths.py',
    'debug_settings.py',
    'runtime_profile.py',
    'constants.py',
]

install_data(services_sources, install_dir: modulesubdir)
